Jar fixes